--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,17 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 
 			<!-- Logo -->
 			<div id="logo">
-				<h1><a href="#">Linear</a></h1>
-				<span class="tag">By TEMPLATED</span>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<h1><a href="#">Do your practice and all is coming.</a></h1>
+				<span class="tag">Ven. Sri K. Pattabhi Jois</span>
 			</div>
 		</div>
 	</div>
